--- a/default/default.csproj
+++ b/default/default.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1F6BCA6A-9F40-4191-BD18-C88EF19DF68F}</ProjectGuid>
+    <ProjectGuid>{DAB7A409-452E-4C61-A927-852E3261FB17}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>assignment</RootNamespace>
-    <AssemblyName>assignment</AssemblyName>
+    <RootNamespace>default</RootNamespace>
+    <AssemblyName>@default</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
